# calculator

./: CMakeLists.txt  README.md
icons/: icons.qrc
src/: ActionButton.qml  Calculator.cpp  Calculator.h  Fonts.qml  Main.cpp  Main.qml  MainWindow.qml  SecretWindow.qml  SimpleButton.qml  Themes.qml  qml.qrc
tests/: test_backend.cpp
